overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body,
 }
 
 main {
-	@apply grid flex-grow gap-4 m-2;
+	@apply grid flex-grow gap-4 m-2 h-full overflow-y-hidden;
 	grid-template-columns: minmax(0, 1fr);
 	grid-template-rows: minmax(0, 1fr) minmax(0, 1fr);
 
@@ -26,7 +26,7 @@ main {
 }
 
 .wrapper {
-	@apply bg-zinc-900 flex flex-col rounded shrink-0 grow-0;
+	@apply bg-zinc-900 flex flex-col rounded;
 }
 
 .editor {
@@ -34,7 +34,6 @@ main {
 	overflow-y: scroll;
 	white-space: break-spaces;
 	word-wrap: break-word;
-	text-wrap: wrap;
 	@apply p-4 bg-zinc-900 rounded text-lg font-mono;
 	resize: none;
 }
@@ -48,5 +47,9 @@ main {
 }
 
 .output {
-	@apply bg-zinc-800 h-full w-full flex shrink-0 grow-0 rounded;
+	height: 100%;
+	overflow-y: scroll;
+	white-space: break-spaces;
+	word-wrap: break-word;
+	@apply p-4 bg-zinc-800 rounded flex;
 }
